Se corrige problema del color

--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,6 +1,6 @@
 body
 {
-    color: rgb(180, 81, 134)
+    color: deeppink;
     text-align: center;
-    font-x family: "Arial";
+    font-family: "Arial";
 }
